fix an issue with `.input-group` wrapped in a `.btn-toolbar`

--- a/assets/sass/material/_text-field-input-group.scss
+++ b/assets/sass/material/_text-field-input-group.scss
@@ -4,6 +4,7 @@
   width: 100%;
 
   .form-control {
+    align-self: center;
     flex: 1 1 auto;
     width: 1%;
   }
